Show XY Circle plot as well

--- a/data.html
+++ b/data.html
@@ -22,6 +22,6 @@
     </script>
     <p id="mainLabel">Scaled</p>
     <img id="main" onClick="cycle()" style="float:left;" src="xyzScaled.png" />
-    <img src="Lookup Table.png" />
+    <img src="Lookup Table.png" /><br /><img src="xyPlot.png" />
   </body>
 </html>
