--- a/data.html
+++ b/data.html
@@ -20,8 +20,11 @@
         document.getElementById('mainLabel').innerText = list[index].title;
       }
     </script>
-    <p id="mainLabel">Scaled</p>
-    <img id="main" onClick="cycle()" style="float:left;" src="xyzScaled.png" />
+    <p id="mainLabel">Loading</p>
+    <img id="main" onClick="cycle()" style="float:left;" src="" />
     <img src="Lookup Table.png" /><br /><img src="xyPlot.png" />
   </body>
+  <script>
+    cycle();
+  </script>
 </html>
